--- a/index.html
+++ b/index.html
@@ -1,40 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFC 播放音乐</title>
+    <title>MP3 Player</title>
 </head>
 <body>
-    <h1>NFC 音乐播放示例</h1>
-    <p>使用 NFC 触碰设备以播放音乐。</p>
-
-    <script>
-        if ('NFCReader' in window) {
-            const nfcReader = new NFCReader();
-
-            nfcReader.onreading = (event) => {
-                const message = event.message;
-                for (const record of message.records) {
-                    if (record.recordType === 'url') {
-                        const audioUrl = new TextDecoder().decode(record.data);
-                        window.open(audioUrl, '_self');
-                    }
-                }
-            };
-
-            nfcReader.onerror = (error) => {
-                console.error('NFC 读取错误:', error);
-                alert('无法读取 NFC 标签。请确保设备支持 NFC 并启用功能。');
-            };
-
-            nfcReader.scan().catch((err) => {
-                console.error('NFC 初始化失败:', err);
-                alert('NFC 初始化失败，请检查设备是否支持 NFC。');
-            });
-        } else {
-            alert('您的设备不支持 NFC 功能。');
-        }
-    </script>
+    <h1>MP3 File Player</h1>
+    <audio controls>
+        <source src="https://shiqi143.github.io/music/" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
